Code cleaning in SLD-CGMES-layout
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>